[gd_scene load_steps=2 format=3 uid="uid://btc31jje3quf6"]

[ext_resource type="Script" path="res://scripts/fabrik.gd" id="1_s2od4"]

[node name="Main" type="Node2D"]
position = Vector2(934, 546)
script = ExtResource("1_s2od4")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(0, 7)
width = 20.0
default_color = Color(1, 0.564706, 0, 1)
joint_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = -881.0
offset_top = -394.0
offset_right = -841.0
offset_bottom = -371.0

[node name="HSlider" type="HSlider" parent="."]
offset_left = -902.0
offset_top = -522.0
offset_right = -802.0
offset_bottom = -506.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="lengthslider" type="HSlider" parent="."]
offset_left = -902.0
offset_top = -493.0
offset_right = -802.0
offset_bottom = -477.0
min_value = 50.0
max_value = 300.0
value = 50.0

[node name="applysmoothing" type="CheckButton" parent="."]
offset_left = -902.0
offset_top = -473.0
offset_right = -858.0
offset_bottom = -449.0
scale = Vector2(1.64, 1.64)
button_pressed = true

[node name="smoothing" type="Label" parent="."]
offset_left = -833.0
offset_top = -466.0
offset_right = -662.0
offset_bottom = -443.0
text = "apply smoothing: true"

[node name="next" type="Button" parent="."]
offset_left = -841.0
offset_top = 23.0
offset_right = -798.0
offset_bottom = 77.0
text = "current:
FABRIK"

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="lengthslider" to="." method="_on_lengthslider_value_changed"]
[connection signal="toggled" from="applysmoothing" to="." method="_on_applysmoothing_toggled"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
